k8s/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: api
  template:
    metadata:
      labels:
        # must at leach match what is in matchLabels
        component: api
    spec:
      containers:
        - name: api
          image: dflack/multi-server
          ports:
            - containerPort: 5000
