k8s/client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: frontend
  template:
    metadata:
      labels:
        # must at leach match what is in matchLabels
        component: frontend
    spec:
      containers:
      - name: frontend
        image: dflack/multi-client
        ports:
        - containerPort: 3000
